# Ollamadex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: database.rs  main.rs  ollama_scraper.rs
