[package]
name = "ollamadex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
owo-colors = "4.3.0"
reqwest = "0.13.4"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
strsim = "0.11.1"
tokio = { version = "1.52.3", features = ["full"] }
